-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.4, 5.5.0
-
None
-
Win7 64bit, MinGW-w64 4.7.2, Qt 4.8.4
-
db2c89beae6235520dd6a375001abf107b229e24
When generating a makefile using qmake, the "make install" command fails if there is a file called install.cpp (or similar) in the list of source files.
Actually, the install command is executed but afterwards, the makefile tries to compile the install.cpp with a broken command line. When renaming the "install.cpp" to something else, everything works as expected. Here is the output of make (I stripped it to the relevant parts):
[...] copy /y c:\workspace\myapp\Resources\ApplicationIcon.ico c:\workspace\myapp\dist\Resources 1 Datei(en) kopiert. g++ -pipe -municode -O2 -frtti -fexceptions -mthreads -Wall -Wextra -DUNICODE [skipping lots of other defines] -DQT_HAVE_SSE2 install.cpp install_target install_html install_skin install_appicon FORCE -o install g++: error: install_target: No such file or directory mingw32-make.EXE[1]: Leaving directory `C:/workspace/myapp' g++: error: install_html: No such file or directory g++: error: install_skin: No such file or directory g++: error: install_appicon: No such file or directory g++: error: FORCE: No such file or directory mingw32-make.EXE[1]: *** [install] Error 1 mingw32-make.EXE: *** [release-install] Error 2
I'm not a makefile expert but I guess there is something going wrong with the "install" target and the "general" *.cpp rule.
I guess the same problem occurs with "make uninstall" in case there is an uninstall.cpp.
- is duplicated by
-
QTBUG-44314 source files referenced from qrc files might get compiled
-
- Closed
-
- relates to
-
QTBUG-66408 all directive in makefile collides with all.c filename in .pro SOURCES
-
- Open
-
For Gerrit Dashboard: QTBUG-30813 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
126999,8 | Stop generating implicit suffix rules in Makefiles | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |